examples/test/testpolicy5830.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5830
  namespace: namespace286
spec:
  podSelector:
    matchLabels:
      key40: value19
      key32: value24
      key14: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value31
      podSelector:
        matchLabels:
          key4: value19
          key42: value13
          key49: value1
